// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainSecurityTitle when children are present it should match the snapshot 1`] = `
<div>
  <h1
    class="ui header DomainSecurityTitle--header"
  >
    a
  </h1>
  <div
    class="DomainSecurityTitle--icon"
  />
  <p>
    Last checked one day ago
  </p>
</div>
`;

exports[`DomainSecurityTitle when failures are present it should match the snapshot 1`] = `
<div>
  <h1
    class="ui header DomainSecurityTitle--header"
  >
    a
  </h1>
  <div
    class="DomainSecurityTitle--icon"
  >
    <i
      style="line-height: 0.3;"
      aria-hidden="true"
      class="red exclamation circle big icon"
    />
  </div>
</div>
`;

exports[`DomainSecurityTitle when inconclusives are present it should match the snapshot 1`] = `
<div>
  <h1
    class="ui header DomainSecurityTitle--header"
  >
    a
  </h1>
  <div
    class="DomainSecurityTitle--icon"
  >
    <i
      style="line-height: 0.3;"
      aria-hidden="true"
      class="grey question circle big icon"
    />
  </div>
</div>
`;

exports[`DomainSecurityTitle when no warnings, failures or inconclusives are present it should match the snapshot 1`] = `
<div>
  <h1
    class="ui header DomainSecurityTitle--header"
  >
    a
  </h1>
  <div
    class="DomainSecurityTitle--icon"
  />
</div>
`;

exports[`DomainSecurityTitle when warnings are present without failures it should match the snapshot 1`] = `
<div>
  <h1
    class="ui header DomainSecurityTitle--header"
  >
    a
  </h1>
  <div
    class="DomainSecurityTitle--icon"
  >
    <i
      style="line-height: 0.3;"
      aria-hidden="true"
      class="yellow exclamation triangle big icon"
    />
  </div>
</div>
`;
